# wardrobe

./: .env.example  .gitignore  IDEAS.md  README.md  main.py  pyproject.toml
.cursor/rules/: production-oop.mdc
docs/: API_PROFILE_WARDROBE.md  BACKEND_IOS_CONNECTION.md  IDM_VTON_SETUP.md  LOCAL_DEVELOPMENT.md  STRUCTURE.md  TRY_ON_LOCAL.md
ios/: README.md
ios/Wardrobe/Wardrobe.xcodeproj/: project.pbxproj
ios/Wardrobe/WardrobeApp/: ContentView.swift  WardrobeApp.swift
ios/Wardrobe/WardrobeApp/Models/: Item.swift  Outfit.swift  User.swift  WardrobeItem.swift
ios/Wardrobe/WardrobeApp/Services/: APIClient.swift
ios/Wardrobe/WardrobeApp/Views/: AddItemView.swift  ClosetView.swift  ProfileView.swift  SettingsView.swift  TodayView.swift
ios/WardrobeApp/Views/: ClosetView.swift
scripts/: README.md  download_mock_images.py  import_uploads_to_db.py  init_db.py  run_diffusion_tryon.py  run_local_tryon.py  seed_mock_data.py
src/wardrobe/: __init__.py  main.py
src/wardrobe/api/: __init__.py  app.py  dependencies.py
src/wardrobe/api/middleware/: __init__.py
src/wardrobe/api/routes/: __init__.py  auth.py  images.py  items.py  outfits.py  recommendations.py  users.py  wardrobe.py
src/wardrobe/config/: __init__.py  settings.py
src/wardrobe/core/: __init__.py
src/wardrobe/data/: database.py  mock_images.py
src/wardrobe/ml/: __init__.py
src/wardrobe/services/: __init__.py  calendar.py  queue.py  try_on.py  weather.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py
tests/core/: __init__.py
tests/ml/: __init__.py
(+29 files in other folders)
