[project]
name = "wardrobe"
version = "0.1.0"
description = "Generative AI mobile app that recommends outfits based on your collection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wardrobe"]
